--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@coreui/coreui-free-react-admin-template",
   "version": "4.4.0",
-  "description": "CoreUI Free React Admin Template",
+  "description": "SI HURIA using CoreUI",
   "homepage": ".",
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
+    "url": "git@github.com:manurung-hitado/coreui-sihuria.git"
   },
   "license": "MIT",
   "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
